# GameEngineTest

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
Commands/: clear.bat
GameEngine/src/: CMakeLists.txt  main.cpp
GameEngine/src/Core/: UseImGui.cpp
GameEngine/src/include/Core/: UseImGui.h
GameUtils/: CMakeLists.txt
GameUtils/include/: EditorUI.h  GameObject.h  Scene.h
GameUtils/src/: EditorUI.cpp  Scene.cpp
ProjectManager/: CMakeLists.txt  main.cpp
ProjectManager/include/Core/: UseImGuiPM.hpp
ProjectManager/include/Models/: CreateWindowData.hpp
ProjectManager/src/Core/: UseImGuiPM.cpp
ProjectManager/src/Models/: CreateWindowData.cpp
ProjectManager/templates/NewProjectBase/: CMakeLists.txt.template
ProjectManager/templates/NewProjectBase/include/: GameHander.hpp.template
ProjectManager/templates/NewProjectBase/source/: GameHander.cpp.template
cmakes/: imguiCreateLibrary.cmake  imguiFileDialodCreateLibrary.cmake  updateSubModules.cmake
src/: CMakeLists.txt  main.cpp
src/Core/: UseImGui.cpp
src/include/Core/: UseImGui.h
